add seats xml layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BookingApplication">
-        <activity android:name=".SearchResultsActivity"
-            android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".SetCustomSeatActivity"></activity>
+        <activity
+            android:name=".SearchResultsActivity"
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
