edit transitions between search results activity and set seats activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BookingApplication">
-        <activity android:name=".SetCustomSeatActivity"></activity>
+        <activity android:name=".SetCustomSeatActivity"
+            android:parentActivityName=".SearchResultsActivity"></activity>
         <activity
             android:name=".SearchResultsActivity"
             android:parentActivityName=".MainActivity" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
